@@ -96,8 +96,7 @@ FILE_PATTERNS          = *.h *.c *.dpd
 RECURSIVE              = YES
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = */Doc/* \
-                         */LowLevel/USBMode.h
+EXCLUDE_PATTERNS       = */LowLevel/USBMode.h
 EXCLUDE_SYMBOLS        = __*
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *
